yamls/02-busybox.yaml
# busybox-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: quote-app
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["sleep", "3600"]
      imagePullPolicy: IfNotPresent
      resources:
        requests:
          cpu: "10m"
          memory: "16Mi"
        limits:
          cpu: "50m"
          memory: "32Mi"
  restartPolicy: Never
