yamls/04-frontend-deployment.yaml
# 04-frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quote-frontend
  namespace: quote-app
  labels:
    app: quote-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quote-frontend
  template:
    metadata:
      labels:
        app: quote-frontend
    spec:
      containers:
        - name: frontend
          image: timursamanchi/quote-docker-app-frontend
          ports:
            - containerPort: 80
---
