yamls/06-frontend-service.yaml
# 05-frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: quote-frontend
  namespace: quote-app
  labels:
    app: quote-frontend
spec:
  selector:
    app: quote-frontend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080  # Optional, can be any value in 30000–32767
---
